2005-02-06  Jim Huang  <jserv@kaffe.org>

	* test/awt/WidgetsDemo/WidgetsDemo.java,
	test/awt/WidgetsDemo/kaffe_powered.png:
	Replace Transvirtual's logo with the new one "Powered
	By Kaffe".

	* test/awt/WidgetsDemo/tvt.jpg:
	Remove.

2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffe/kaffevm/classMethod.c
	(userLoadClass): Removed unused variable.

2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/DateFormat.c,
	libraries/clib/native/Arrays.c:
	Removed unused files.

	* libraries/clib/native/Makefile.am:
	Removed DateFormat.c and Arrays.c.

	* include/Makefile.am:
	Don't create headers for DateFormat and Arrays.

2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* config/powerpc/aix/md.c,
	config/powerpc/linux/md.c,
	config/powerpc/machten/md.c:
	Removed unused thread_dummy function
	from old Kaffe days.

2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/locks.c (dumpObjectLocks):
	Removed unused empty function.

2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/Runtime.c 
	(java_lang_Runtime_getLibPrefix, 
	java_lang_Runtime_getLibSuffix): ANSI-fied prototypes.

2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/gcFuncs.c: Replaced 'index' by 'objIndex' to 
	fix compiler warnings about shadowed symbols.

2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/jni/jni-base.c (KaffeJNI_ParseUserProperty):
	Factored out of KaffeJNI_ParseArgs to fix compiler warning,
	and simplify code a bit. Added comments.

2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/intrp/machine.c
	(getEngine): ANSI-fied prototype.

2005-02-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/lock-impl.c
	(setBlockState): De-inlined to fix compiler warnings
	with gcc 3.4 on powerpc-linux.

2005-02-06  Guilhem Lavaux  <guilhem@kaffe.org>

	* configure.ac: Setup SEMAPHORE_LIB correctly. Force enable_mips2 to
	yes if omitted.
